--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
 	<groupId>io.github.segosambel</groupId>
 	<artifactId>spring-boot-starter-audit</artifactId>
-	<version>0.1.0</version>
+	<version>0.1.1-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
 	<name>Spring Boot Audit Starter</name>
@@ -86,7 +86,7 @@
 		<connection>scm:git:https://github.com/segosambel/spring-boot-starter-audit.git</connection>
 		<developerConnection>scm:git:https://github.com/segosambel/spring-boot-starter-audit.git</developerConnection>
 		<url>https://github.com/segosambel/spring-boot-starter-audit</url>
-		<tag>v0.1.0</tag>
+		<tag>HEAD</tag>
 	</scm>
 
 </project>
